<project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

   <modelVersion>4.0.0</modelVersion>

   <groupId>org.fourz.RVNKLore</groupId>
   <artifactId>RVNKLore</artifactId>
   <version>1.0.23</version>

   <name>RVNKLore</name>
   <description></description>
   <url>http://www.example.com</url>

   <properties>
       <java.version>21</java.version>
       <maven.compiler.release>21</maven.compiler.release>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
   <repositories>
       <repository>
           <id>spigot-repo</id>
           <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
       </repository>
       <repository>
           <id>placeholderapi</id>
           <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
       </repository>
       <repository>
           <id>nms-repo</id>
           <url>https://maven.elmakers.com/repository/</url>
       </repository>
       <repository>
           <id>minecraft-libraries</id>
           <url>https://libraries.minecraft.net/</url>
       </repository>
       <repository>
           <id>dynmap-repo</id>
           <url>https://repo.mikeprimm.com/</url>
       </repository>
       <repository>
           <id>bencodez-repo</id>
           <url>https://nexus.bencodez.com/repository/maven-public/</url>
       </repository>
       <repository>
           <id>jitpack.io</id>
           <url>https://jitpack.io</url>
       </repository>
       <repository>
           <id>citizens-repo</id>
           <url>https://repo.citizensnpcs.co/</url>
       </repository>
   </repositories>

   <dependencies>
       <dependency>
           <groupId>org.spigotmc</groupId>
           <artifactId>spigot-api</artifactId>
           <version>1.21.4-R0.1-SNAPSHOT</version>
           <scope>provided</scope>
       </dependency>
       <dependency>
           <groupId>org.spigotmc</groupId>
           <artifactId>spigot</artifactId>
           <version>1.21.4-R0.1-SNAPSHOT</version>
           <classifier>remapped-mojang</classifier>
           <scope>provided</scope>
       </dependency>
       <dependency>
           <groupId>org.yaml</groupId>
           <artifactId>snakeyaml</artifactId>
           <version>2.0</version>
       </dependency>
       <dependency>
           <groupId>com.google.guava</groupId>
           <artifactId>guava</artifactId>
           <version>32.1.3-jre</version>
       </dependency>
       <dependency>
           <groupId>com.google.code.gson</groupId>
           <artifactId>gson</artifactId>
           <version>2.8.9</version>
       </dependency>
       <!-- RVNKCore - Local JAR dependency (bundled with RVNKTools) -->
       <!-- Uses 'provided' scope to avoid systemPath warnings -->
       <!-- JAR must be in server plugins folder at runtime -->
       <dependency>
           <groupId>org.fourz</groupId>
           <artifactId>rvnkcore</artifactId>
           <version>1.4.10-alpha</version>
           <scope>provided</scope>
       </dependency>
       <!-- RVNKQuests - for QuestCompleteEvent cross-plugin integration -->
       <dependency>
           <groupId>org.fourz.RVNKQuests</groupId>
           <artifactId>RVNKQuests</artifactId>
           <version>1.0-SNAPSHOT</version>
           <scope>provided</scope>
       </dependency>
       <!-- Jakarta Servlet API removed — API routing handled by RVNKCore's LoreController -->
       <!-- PlaceholderAPI for placeholder integration -->
       <dependency>
           <groupId>me.clip</groupId>
           <artifactId>placeholderapi</artifactId>
           <version>2.11.6</version>
           <scope>provided</scope>
       </dependency>
       <!-- Dynmap API for map marker integration -->
       <dependency>
           <groupId>us.dynmap</groupId>
           <artifactId>DynmapCoreAPI</artifactId>
           <version>3.8</version>
           <scope>provided</scope>
       </dependency>
       <!-- VotingPlugin: soft dependency — loaded via reflection at runtime, no compile-time jar needed -->
       <!-- GriefPrevention API for claim integration -->
       <dependency>
           <groupId>com.github.TechFortress</groupId>
           <artifactId>GriefPrevention</artifactId>
           <version>16.18</version>
           <scope>provided</scope>
       </dependency>
       <!-- Citizens API for NPC integration -->
       <dependency>
           <groupId>net.citizensnpcs</groupId>
           <artifactId>citizens-main</artifactId>
           <version>2.0.34-SNAPSHOT</version>
           <scope>provided</scope>
           <exclusions>
               <exclusion>
                   <groupId>*</groupId>
                   <artifactId>*</artifactId>
               </exclusion>
           </exclusions>
       </dependency>

       <!-- Test Dependencies -->
       <dependency>
           <groupId>org.junit.jupiter</groupId>
           <artifactId>junit-jupiter</artifactId>
           <version>5.10.1</version>
           <scope>test</scope>
       </dependency>
       <dependency>
           <groupId>org.mockito</groupId>
           <artifactId>mockito-core</artifactId>
           <version>5.8.0</version>
           <scope>test</scope>
       </dependency>
       <dependency>
           <groupId>org.mockito</groupId>
           <artifactId>mockito-junit-jupiter</artifactId>
           <version>5.8.0</version>
           <scope>test</scope>
       </dependency>
       <!-- MySQL, HikariCP, and SQLite JDBC provided by RVNKCore at runtime -->
   </dependencies>
   <build>
       <finalName>${project.artifactId}</finalName>
       <resources>
           <resource>
               <directory>src/main/resources</directory>
               <filtering>true</filtering>
           </resource>
       </resources>
       <plugins>
           <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-shade-plugin</artifactId>
               <version>3.2.4</version>
               <executions>
                   <execution>
                       <phase>package</phase>
                       <goals>
                           <goal>shade</goal>
                       </goals>
                       <configuration>
                           <filters>
                               <filter>
                                   <artifact>*:*</artifact>
                                   <excludes>
                                       <exclude>META-INF/MANIFEST.MF</exclude>
                                   </excludes>
                               </filter>
                           </filters>
                       </configuration>
                   </execution>
               </executions>
           </plugin>

           <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-antrun-plugin</artifactId>
               <version>1.8</version>
               <executions>
                   <execution>
                       <phase>package</phase>
                       <goals>
                           <goal>run</goal>
                       </goals>
                       <configuration>
                           <target>
                           </target>
                       </configuration>
                   </execution>
               </executions>
           </plugin>
           <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
               <version>3.2.3</version>
           </plugin>
       </plugins>
   </build>
</project>
